# todo-list-app

./: .env  alembic_commands.txt  commands.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 8aea453cb9a2_create_project_and_task_tables.py  c2fc09272f2a_make_primary_keys_autoincrement.py  ee4881058453_initial.py
src/core/application/contracts/: project_contract.py  task_contract.py
src/core/application/dtos/: project_dtos.py  response_dto.py  task_dtos.py
src/core/application/factories/: project_factory.py  task_factory.py
src/core/application/i_use_cases/: i_project_use_case.py  i_task_use_case.py
src/core/application/jobs/: close_overdue_tasks_job.py
src/core/application/use_cases/: project_use_case.py  task_use_case.py
src/core/domain/entities/: project.py  task.py
src/core/domain/i_repositories/: i_project_repository.py  i_task_repository.py
src/infrastructure/data/: in_memory_database.py
src/infrastructure/memory/repositories/: task_repository.py
src/infrastructure/persistence/data/: base.py  session.py
src/infrastructure/persistence/repositories/: project_repository.py  task_repository.py
src/infrastructure/repositories/: project_repository.py  task_repository.py
src/presentation/: setup.py
src/presentation/api/: app.py
src/presentation/api/endpoints/: project_endpoint.py  task_endpoints.py
src/presentation/console/: app.py  program.py  setup.py
