[tool.poetry]
name = "todo-list-app"
version = "0.1.0"
description = "A Clean Architecture CLI Todo List app"
authors = ["Alireza Mousavi <alrza.msvn@gmail.com>"]
readme = "README.md"
packages = [{ include = "src", from = "." }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
schedule = "^1.2.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
